# edgen

./: .editorconfig  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  setup.yml
.github/workflows/setup-action/: action.yml
crates/edgen_async_compat/: Cargo.toml
crates/edgen_async_compat/src/: lib.rs
crates/edgen_core/: Cargo.toml
crates/edgen_core/src/: image_generation.rs  lib.rs  llm.rs  perishable.rs  request.rs  settings.rs  whisper.rs
crates/edgen_rt_chat_faker/: Cargo.toml
crates/edgen_rt_chat_faker/src/: lib.rs
crates/edgen_rt_image_generation_candle/: Cargo.toml
crates/edgen_rt_image_generation_candle/src/: lib.rs
crates/edgen_rt_llama_cpp/: Cargo.toml
crates/edgen_rt_llama_cpp/src/: lib.rs  llava.rs
crates/edgen_rt_whisper_cpp/: Cargo.toml
crates/edgen_rt_whisper_cpp/src/: lib.rs
crates/edgen_server/: Cargo.toml
crates/edgen_server/resources/: configuration.default.toml  model_patterns.yaml
crates/edgen_server/src/: chat_faker.rs  cli.rs  error.rs  graceful_shutdown.rs  image_generation.rs  lib.rs  llm.rs  misc.rs  model.rs  model_descriptor.rs  model_man.rs  openai_shim.rs  routes.rs  status.rs  types.rs  util.rs  whisper.rs
crates/edgen_server/src/util/: perishable.rs  stopping_stream.rs
crates/edgen_server/tests/: modelmanager_tests.rs  settings_tests.rs
crates/edgen_server/tests/common/: mod.rs
docs/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  typography.ts
docs/assets/stylesheets/: extra.css
docs/src/: image.d.ts
docs/src/app/: layout.tsx  page.mdx
docs/src/app/api-reference/: page.tsx
docs/src/app/api-reference/audio/: page.mdx
docs/src/app/api-reference/chat/: page.mdx
docs/src/app/api-reference/embeddings/: page.mdx
docs/src/app/api-reference/image/: page.mdx
docs/src/app/api-reference/models/: page.mdx
docs/src/app/documentation/: page.tsx
docs/src/app/documentation/api-clients/: page.mdx
docs/src/app/documentation/configuration/: page.mdx
docs/src/app/documentation/contribute/: page.mdx
docs/src/app/documentation/getting-started/: page.mdx
docs/src/app/documentation/models/: page.mdx
docs/src/app/documentation/overview/: page.mdx
docs/src/app/documentation/sdks/: page.mdx
docs/src/app/guides/: page.tsx
docs/src/app/guides/examples/: page.mdx
docs/src/app/guides/quickstart/: page.mdx
docs/src/components/: APIClients.tsx  Button.tsx  ButtonRow.tsx  Code.tsx  Endpoints.tsx  Feedback.tsx  Footer.tsx  Guides.tsx  Header.tsx  Heading.tsx  HeroPattern.tsx  Highlights.tsx  Layout.tsx  Logo.tsx  Navigation.tsx  SDKs.tsx  Search.tsx  Tag.tsx  mdx.tsx
docs/src/components/icons/: CubeIcon.tsx  MicrophoneIcon.tsx
docs/src/styles/: tailwind.css
edgen/: README.md  package.json  pnpm-lock.yaml
edgen/src/: App.tsx  styles.css
edgen/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
edgen/src-tauri/.cargo/: config.toml
edgen/src-tauri/icons/: icon.icns
edgen/src-tauri/src/: gui.rs  main.rs
openapi-docs/: edgen-api-spec.json  edgen-api-spec.yaml
scripts/: add_copyright.sh  gen-openapi-spec.sh
tests/: requirements.txt  runtests.sh  test_audio.py  test_chat.py  test_misc.py  test_models.py
