[workspace]
resolver = "2"
members = [
    "crates/edgen_core",
    "crates/edgen_server",
    "crates/edgen_async_compat",
    "crates/edgen_rt_image_generation_candle",
    "crates/edgen_rt_llama_cpp",
    "crates/edgen_rt_whisper_cpp",
    "crates/edgen_rt_chat_faker",
    "edgen/src-tauri",
]

[workspace.dependencies]
ahash = "0.8.6"
argh = "0.1.12"
async-executor = "1.6.0"
async-task = "4.5.0"
async-trait = "0.1.80"
axum = "0.7.1"
blake3 = "1.5.0"
cfg-if = "1.0.0"
clap = "4.4.8"
console-subscriber = "0.2.0"
dashmap = "5.5.3"
data-encoding = "2.4.0"
derive_more = "0.99.17"
directories = "5.0.1"
either = "1.9.0"
flume = "0.11.0"
futures = "0.3.29"
futures-lite = "2.0.1"
glommio = "0.9.0"
hyper = "1.0.1"
hyper-util = "0.1.1"
link-cplusplus = "1.0.9"
notify = "6.1.1"
num_cpus = "1.16.0"
once_cell = "1.18.0"
pin-project = "1.1.3"
prost = "0.12.2"
prost-build = "0.12.2"
reqwest = { version = "0.12.3", default-features = false }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.30"
sled = "0.34.7"
smol = "2.0.0"
static_assertions = "1.1.0"
tempfile = "3.9.0"
thiserror = "1.0.50"
time = "0.3.30"
tinyvec = "1.6.0"
tauri = { version = "1.6.2", features = [] }
tokio = "1.34.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
toml_edit = "0.22.5"
tracing = "0.1.40"
uuid = "1.6.1"
utoipa = { version = "4", features = ["yaml"] }
