[package]
name = "edgen_rt_whisper_cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { workspace = true }
edgen_core = { path = "../edgen_core" }
futures = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
once_cell = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
whisper_cpp = { git = "https://github.com/edgenai/whisper_cpp-rs", branch = "feat/cuda", features = ["native"] }

