[package]
name = "edgen_server"
version = "0.1.3"
edition = "2021"

[dependencies]
argh = { workspace = true }
axum = { workspace = true, features = ["tokio", "multipart"] }
axum_typed_multipart = "0.11.0"
axum-test = "14.2"
console-subscriber = { workspace = true }
copy_dir = "0.1.3"
dashmap = { workspace = true }
derive_more = { workspace = true }
edgen_rt_llama_cpp = { path = "../edgen_rt_llama_cpp" }
edgen_rt_whisper_cpp = { path = "../edgen_rt_whisper_cpp" }
either = { workspace = true, features = ["serde"] }
futures = { workspace = true }
hf-hub = "0.3.2"
hyper = { workspace = true }
hyper-util = { workspace = true }
once_cell = { workspace = true }
pin-project = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "multipart"] }
rubato = "0.14.1"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
tinyvec = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tower-http = { version = "0.5.1", features = ["cors"] }
edgen_core = { path = "../edgen_core" }
testcontainers = "0.15.0"

[dev-dependencies]
levenshtein = "1.0.5"
tempfile = { workspace = true }

[features]
llama_vulkan = ["edgen_rt_llama_cpp/vulkan"]
llama_cuda = ["edgen_rt_llama_cpp/cuda"]
llama_metal = ["edgen_rt_llama_cpp/metal"]
whisper_cuda = ["edgen_rt_whisper_cpp/cuda"]
